data/application.css
GtkWidget {
	outline-width: 0px;
    text-shadow: none;
}

GtkTreeView {
    background-color: shade(@theme_bg_color, 1.1);
    padding: 2px 2px 2px 2px;
}

GtkTreeView row:hover {
    background-image: none;
    border-style: none;
}

GtkTreeView row:selected {
    background-image: none;
    border-style: none;
}

GtkTreeView:selected {
    background-color: @theme_bg_color;
    color: @theme_fg_color;
}

GtkTreeView:hover {
    background-color: @theme_bg_color;
    color: @theme_fg_color;
}

GtkTreeView.separator {
    color: shade(@theme_bg_color, 0.9);
}

Gtk.ListBoxRow .menu-button {
	border-color: transparent;
	background-color: transparent;
	color: transparent;
}

Gtk.ListBoxRow .menu-button:hover {
	border-color: alpha(@theme_fg_color, 0.1);
}

.rounded {
    border-radius: 20px;
    outline-radius: 20px;
}

.osd-popover {
    background-color: @theme_fg_color;
    color: @theme_bg_color;
    opacity: 0.95;
}

.lollypop-title {
    font-weight: bold;
    padding: 0px 12px;
}

.lollypop-subtitle {
    font-size: smaller;
    padding: 0px 12px;
}

.lollypop-sidebar .image{
    color: alpha(@theme_fg_color, 0.8);
}

.lollypop-sidebar .image:backdrop{
    color: alpha(@theme_fg_color, 0.6);
}

.hovereffect {
    -gtk-image-effect: highlight;
}

.externals {
    background-color: @theme_bg_color;
    color: @theme_fg_color;
}

.externals:selected {
    background-color: @theme_bg_color;
    color: @theme_fg_color;
}

.trackswidget {
	background-color: transparent;
}

.trackrow {
	background-color: transparent;
  	color: inherit;
}

.trackrow:hover {
    border-radius: 5px;
    outline-radius: 5px;
	background-color: alpha(@theme_fg_color, 0.03);
  	color: inherit;
}

.trackrow:selected {
    border-radius: 5px;
    outline-radius: 5px;
	background-color: transparent;
  	color: inherit;
}

.trackrowplaying {
    border-radius: 5px;
    outline-radius: 5px;
	background-color: alpha(@theme_fg_color, 0.05);
  	color: inherit;
}

.trackrowplaying .menu-button{
	background-color: transparent;
    border-color: transparent;
  	color: transparent;
}

.trackrowplaying:hover .menu-button{
	border-color: transparent;
  	color: inherit;
}

.trackrowplaying:hover .menu-button:hover {
	border-color: alpha(#000000, 0.1);
}

.trackrow .menu-button {
	border-color: transparent;
	background-color: transparent;
	color: transparent;
}

.trackrow:hover .menu-button {
  	color: inherit;
}

.trackrow:hover .menu-button:hover {
	border-color: alpha(@theme_fg_color, 0.1);
}

.album-menu-selected .album-menu-button{
	border-color: alpha(@theme_fg_color, 0.1);
  	color: inherit;
}

.track-menu-selected {
	background-color: alpha(@theme_fg_color, 0.03);
  	color: inherit;
}

.track-menu-selected .track-menu-button{
	border-color: alpha(@theme_fg_color, 0.1);
  	color: inherit;
}

.menu-button {
	box-shadow: none;
	padding-top: 0;
	padding-bottom: 0;
	background-image: none;
    color: inherit;
}

.menu-button:hover {
	border-color: alpha(@theme_fg_color, 0.1);
  	color: inherit;
}

